# Integrated-Project-Microwave-Oven

./: .gitignore  README.md  solve3D.c
math0471/: CMakeLists.txt  README.md  devenv-mingw32.bat  devenv-mingw64.bat  devenv-vs2015.bat  devenv-vs2017.bat
math0471/Fichier_test_electro/Wave_propagation_homo_medium/Results/Cut/: Cut_Ey_alongX_step100_rank0.txt  Cut_Ey_alongX_step150_rank0.txt  Cut_Ey_alongX_step200_rank0.txt  Cut_Ey_alongX_step200_rank4.txt  Cut_Ey_alongX_step400_rank4.txt  Cut_Ey_alongX_step50_rank0.txt  Cut_Ey_alongX_step75_rank0.txt  Cut_Ez_alongX_step50_rank4.txt  Cut_Hx_alongX_step100_rank0.txt  Cut_Hx_alongX_step150_rank0.txt  Cut_Hx_alongX_step200_rank0.txt  Cut_Hx_alongX_step200_rank4.txt  Cut_Hx_alongX_step300_rank0.txt  Cut_Hx_alongX_step300_rank4.txt  Cut_Hx_alongX_step50_rank4.txt  (+18 more)
math0471/Fichier_test_thermo/Test_Order_BC_Dirichlet/Results/: Thermo_test_order.m
math0471/Fichier_test_thermo/Test_Order_BC_Neuman_Non_homogene/: README.txt  Thermo_test_order_Neuman_nonh.m
math0471/Fichier_test_thermo/Test_Order_BC_Neuman_Non_homogene/Results/: Thermo_test_order.m
math0471/Solver/: CMakeLists.txt  elm.cpp  elm.h  laplace.h  main.cpp  material.cpp  material.h  thermal.cpp  thermal.h
math0471/exe/fdtd/: CMakeLists.txt  fdtd.cpp  fdtd.cpp~
math0471/exe/fdtd_mpi/: CMakeLists.txt  fdtd_mpi.cpp  fdtd_mpi.cpp~
math0471/mumps/: CMakeLists.txt  main.cpp  main.cpp~
math0471/tests/: convert.py  rectgrid.py  strpoints.py  test_base64z.py
math0471/vtl/: CMakeLists.txt  swapbytes.h  vtl.cpp  vtl.cpp~  vtl.h  vtlSPoints.cpp  vtlVec3.h
(+102 files in other folders)
